force-app/main/default/objects/GRD_Grease_Removal_Device__c/GRD_Grease_Removal_Device__c.object-meta.xml
<CustomObject>
    <label>GRD (Grease Removal Device)</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>GRD (Grease Removal Device) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRDs (Grease Removal Devices)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>