force-app/main/default/objects/GRD_Grease_Removal_Device__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GRDs (Grease Removal Devices)</relationshipLabel>
    <relationshipName>GRDs_Grease_Removal_Devices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>