force-app/main/default/objects/GRD_Grease_Removal_Device__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <label>Service ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>