force-app/main/default/objects/GRD_Grease_Removal_Device__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>